# benchviz

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  readme.md
src/: cli.rs  config.rs  git.rs  io.rs  main.rs  types.rs
