[package]
name = "benchviz"
version = "0.0.0"
authors = ["superfunc <superfunc@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.82", features = ['derive'] }
serde_json = "1.0"
clap = "2.32.0"
dialoguer = "0.3.0"
dirs = "1.0.4"
colored = "1.6"
plotlib = { git = "https://github.com/superfunc/plotlib", branch="rust2018" }

[badges]
travis-ci = { repository = "superfunc/benchviz" }
